// Copyright (C) 2020 THL A29 Limited, a Tencent company. All rights reserved.
//
// Licensed under the BSD 3-Clause License (the "License"); you may not use this
// file except in compliance with the License. You may obtain a copy of the
// License at
//
// https://opensource.org/licenses/BSD-3-Clause
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

package flare.http;

option go_package = "tencent.com/protobuf/flare/rpc/protocol/http/binlog_proto";

message HeaderField {
  string key = 1;
  string value = 2;
}

// Only responses are stored. We (`HttpClient`) don't care about requests.
message SerializedClientPacket {
  uint32 status = 1;
  uint32 version = 2;
  repeated HeaderField headers = 3;
  bytes body = 4;
};

// Only requests are stored.
message SerializedServerPacket {
  int32 method = 1;
  string uri = 2;
  int32 version = 5;
  repeated HeaderField headers = 3;
  bytes body = 4;
}
